# divizapi

./: .env.example  .gitignore  LICENSE  README.md  analyzer.py  analyzer_api.py  cdk.context.json  jq  mcp.json  pyproject.toml  run_tests.py  test-api.sh
.windsurf/rules/: useuv.md
cdk/: .gitignore  Dockerfile.lambda  README.md  app.py  cdk.json  create_google_secret.sh  deploy-optimized.sh  deploy.sh  pyproject.toml  requirements.lambda.txt
cdk/lambda/: lambda_handler.py
cdk/stacks/: diviz_api_stack.py  diviz_cognito_stack.py
cdk/utils/: env_loader.py
diviz/: __init__.py  fireflies.py  google_auth.py  main.py  meeting_analyzer.py  meeting_info.py  meeting_repository.py  user.py  user_repository.py
diviz/auth/: __init__.py  cognito_auth.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: auth-context.tsx  layout.tsx  page.tsx
frontend/public/: README.txt
tests/: __init__.py  conftest.py  test_api.py  test_meeting_analyzer_integration.py
