[project]
name = "kn-api-server"
version = "1.0.0"
description = "A simple FastAPI service with an echo endpoint"
authors = [
    {name = "Developer", email = "developer@example.com"},
]
dependencies = [
    "aiodns>=3.5.0",
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.24.0",

]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/kos2nov/divizapi"
Repository = "https://github.com/kos2nov/divizapi.git"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diviz"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
echo-start = "diviz.main:main"



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]
